@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2010; Nikoli <nikoli@lavabit.com>
+  +psi-cleaner-0.2.8_pre3268.ebuild:
+  version bump
+
   21 Oct 2010; Nikoli <nikoli@lavabit.com>
   +psi-cleaner-0.2.7_pre3076.ebuild:
   version bump
